e2e-auth-run2.log
[dotenv@17.2.3] injecting env (47) from .env -- tip: ⚙️  load multiple .env files with { path: ['.env.local', '.env'] }
[dotenv@17.2.3] injecting env (14) from .env.development -- tip: 🔐 prevent committing .env to code: https://dotenvx.com/precommit
🚀 Starting E2E test global setup...
✅ Admin user ready: e2e-admin@test-internal.local (id: cmmp384vx0000kxfcquj3xggp)
✅ Lawyer user ready: e2e-lawyer@test-internal.local (id: cmmp3854a0001kxfcarzu5d28)
✅ Qualification upserted to PENDING (id: cmmp3854d0003kxfcqqh8ef0s)
✅ Role ADMIN ready (id: cmkcfogu90019nuu057kduv0u)
✅ ADMIN role permissions seeded
✅ E2E law articles seeded (ids: e2e-law-article-001, e2e-law-article-002)
✅ Test state written to D:\legal_debate_mvp\src\__tests__\e2e\.e2e-test-state.json
✅ E2E test global setup completed

Running 38 tests using 2 workers

[1A[2K[dotenv@17.2.3] injecting env (0) from .env -- tip: ⚙️  suppress all logs with { quiet: true }

[1A[2K[dotenv@17.2.3] injecting env (0) from .env -- tip: ⚙️  override existing env vars with { override: true }

[1A[2K[dotenv@17.2.3] injecting env (0) from .env.development -- tip: 🔐 encrypt with Dotenvx: https://dotenvx.com

[1A[2K[dotenv@17.2.3] injecting env (0) from .env.development -- tip: 🔐 prevent building .env in docker: https://dotenvx.com/prebuild

[1A[2K[1/38] [chromium] › src\__tests__\e2e\basic.spec.ts:4:7 › Basic E2E Tests › should load home page
[1A[2K[2/38] [chromium] › src\__tests__\e2e\auth.spec.ts:206:7 › 用户注册与登录流程 › 应该成功注册新用户
[1A[2K[3/38] [chromium] › src\__tests__\e2e\auth.spec.ts:215:7 › 用户注册与登录流程 › 注册时应该验证邮箱格式
[1A[2K[4/38] [chromium] › src\__tests__\e2e\auth.spec.ts:229:7 › 用户注册与登录流程 › 注册时应该验证密码复杂度
[1A[2K[5/38] [chromium] › src\__tests__\e2e\auth.spec.ts:243:7 › 用户注册与登录流程 › 应该拒绝重复注册的邮箱
[1A[2K[6/38] [chromium] › src\__tests__\e2e\auth.spec.ts:261:7 › 用户注册与登录流程 › 应该成功登录已注册用户
[1A[2K[7/38] [chromium] › src\__tests__\e2e\auth.spec.ts:273:7 › 用户注册与登录流程 › 应该拒绝错误的密码
[1A[2K[8/38] [chromium] › src\__tests__\e2e\auth.spec.ts:288:7 › 用户注册与登录流程 › 应该获取当前用户信息
[1A[2K[9/38] [chromium] › src\__tests__\e2e\auth.spec.ts:309:7 › 用户注册与登录流程 › 未认证用户应该无法获取当前用户信息
[1A[2K[10/38] [chromium] › src\__tests__\e2e\auth.spec.ts:321:7 › 用户会话管理 › 应该成功刷新访问令牌
[1A[2K[11/38] [chromium] › src\__tests__\e2e\basic.spec.ts:11:7 › Basic E2E Tests › should have proper meta tags
[1A[2K[12/38] [chromium] › src\__tests__\e2e\basic.spec.ts:19:7 › Basic E2E Tests › should be responsive
[1A[2K[13/38] [chromium] › src\__tests__\e2e\auth.spec.ts:348:7 › 用户会话管理 › 应该支持登出当前设备
[1A[2K[14/38] [chromium] › src\__tests__\e2e\auth.spec.ts:371:7 › 用户会话管理 › 应该支持登出所有设备
[1A[2K[15/38] [chromium] › src\__tests__\e2e\auth.spec.ts:394:7 › 用户会话管理 › 过期的令牌应该被拒绝
[1A[2K[16/38] [chromium] › src\__tests__\e2e\auth.spec.ts:413:7 › 密码找回与重置 › 应该发送密码重置验证码
[1A[2K  1) [chromium] › src\__tests__\e2e\auth.spec.ts:413:7 › 密码找回与重置 › 应该发送密码重置验证码 ─────────────────────

    Error: [2mexpect([22m[31mreceived[39m[2m).[22mtoBeTruthy[2m()[22m

    Received: [31mfalse[39m

      424 |
      425 |     const data: PasswordResetResponseData = await response.json();
    > 426 |     expect(response.ok()).toBeTruthy();
          |                           ^
      427 |     expect(data.success).toBe(true);
      428 |     expect(data.message).toContain('验证码');
      429 |   });
        at D:\legal_debate_mvp\src\__tests__\e2e\auth.spec.ts:426:27


[1A[2K[dotenv@17.2.3] injecting env (0) from .env -- tip: ⚙️  enable debug logging with { debug: true }

[1A[2K[dotenv@17.2.3] injecting env (0) from .env.development -- tip: 🔐 prevent building .env in docker: https://dotenvx.com/prebuild

[1A[2K[17/38] [chromium] › src\__tests__\e2e\auth.spec.ts:431:7 › 密码找回与重置 › 应该防止邮箱枚举攻击（不存在的用户也返回成功）
[1A[2K[18/38] [chromium] › src\__tests__\e2e\auth.spec.ts:448:7 › 密码找回与重置 › 应该验证验证码格式
[1A[2K[19/38] [chromium] › src\__tests__\e2e\auth.spec.ts:462:7 › 密码找回与重置 › 应该拒绝无效的验证码
[1A[2K[20/38] [chromium] › src\__tests__\e2e\auth.spec.ts:476:7 › 密码找回与重置 › 应该验证新密码复杂度
[1A[2K[21/38] [chromium] › src\__tests__\e2e\auth.spec.ts:496:7 › 律师资格验证流程 › 应该提交律师资格申请
[1A[2K[22/38] [chromium] › src\__tests__\e2e\auth.spec.ts:526:7 › 律师资格验证流程 › 应该验证执业证号格式
[1A[2K[23/38] [chromium] › src\__tests__\e2e\auth.spec.ts:552:7 › 律师资格验证流程 › 应该验证身份证号格式
[1A[2K[24/38] [chromium] › src\__tests__\e2e\auth.spec.ts:578:7 › 律师资格验证流程 › 应该获取当前用户的资格状态
[1A[2K[25/38] [chromium] › src\__tests__\e2e\auth.spec.ts:612:7 › 律师资格验证流程 › 管理员应该能够审核资格申请
[1A[2K  2) [chromium] › src\__tests__\e2e\auth.spec.ts:612:7 › 律师资格验证流程 › 管理员应该能够审核资格申请 ──────────────────

    SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON

      647 |     );
      648 |
    > 649 |     const reviewData = await reviewResponse.json();
          |                        ^
      650 |     expect(reviewResponse.ok()).toBeTruthy();
      651 |     expect(reviewData.success).toBe(true);
      652 |     expect(reviewData.data?.qualification.status).toBe('APPROVED');
        at D:\legal_debate_mvp\src\__tests__\e2e\auth.spec.ts:649:24


[1A[2K[dotenv@17.2.3] injecting env (0) from .env -- tip: 🔐 encrypt with Dotenvx: https://dotenvx.com

[1A[2K[dotenv@17.2.3] injecting env (0) from .env.development -- tip: 🔐 prevent building .env in docker: https://dotenvx.com/prebuild

[1A[2K[26/38] [chromium] › src\__tests__\e2e\auth.spec.ts:695:7 › 企业认证流程 › 应该提交企业注册申请
[1A[2K[27/38] [chromium] › src\__tests__\e2e\auth.spec.ts:722:7 › 企业认证流程 › 应该验证统一社会信用代码格式
[1A[2K[28/38] [chromium] › src\__tests__\e2e\auth.spec.ts:745:7 › 企业认证流程 › 应该获取当前用户的企业信息
[1A[2K[29/38] [chromium] › src\__tests__\e2e\auth.spec.ts:785:7 › 第三方认证流程 › 应该支持微信OAuth授权流程
[1A[2K[30/38] [chromium] › src\__tests__\e2e\auth.spec.ts:796:7 › 第三方认证流程 › 应该支持QQ OAuth授权流程
[1A[2K[31/38] [chromium] › src\__tests__\e2e\auth.spec.ts:807:7 › 第三方认证流程 › OAuth回调应该验证必要参数
[1A[2K  3) [chromium] › src\__tests__\e2e\auth.spec.ts:807:7 › 第三方认证流程 › OAuth回调应该验证必要参数 ─────────────────

    Error: [2mexpect([22m[31mreceived[39m[2m).[22mtoBe[2m([22m[32mexpected[39m[2m) // Object.is equality[22m

    Expected: [32m400[39m
    Received: [31m401[39m

      811 |     });
      812 |
    > 813 |     expect(response.status()).toBe(400);
          |                               ^
      814 |   });
      815 | });
      816 |
        at D:\legal_debate_mvp\src\__tests__\e2e\auth.spec.ts:813:31


[1A[2K[dotenv@17.2.3] injecting env (0) from .env -- tip: 🔐 prevent committing .env to code: https://dotenvx.com/precommit

[1A[2K[dotenv@17.2.3] injecting env (0) from .env.development -- tip: 🗂️ backup and recover secrets: https://dotenvx.com/ops

[1A[2K[32/38] [chromium] › src\__tests__\e2e\auth.spec.ts:822:7 › 综合测试 - 完整用户生命周期 › 完整用户生命周期：注册到激活
[1A[2K[33/38] [chromium] › src\__tests__\e2e\auth.spec.ts:917:7 › 安全和边界情况测试 › 应该拒绝无效的JWT令牌
[1A[2K[34/38] [chromium] › src\__tests__\e2e\auth.spec.ts:927:7 › 安全和边界情况测试 › 应该拒绝缺少Authorization头的请求
[1A[2K[35/38] [chromium] › src\__tests__\e2e\auth.spec.ts:933:7 › 安全和边界情况测试 › 应该拒绝格式错误的Authorization头
[1A[2K[36/38] [chromium] › src\__tests__\e2e\auth.spec.ts:943:7 › 安全和边界情况测试 › 应该处理过大的请求体
[1A[2K[37/38] [chromium] › src\__tests__\e2e\auth.spec.ts:967:7 › 安全和边界情况测试 › 应该处理缺失必填字段的请求
[1A[2K[38/38] [chromium] › src\__tests__\e2e\auth.spec.ts:980:7 › 安全和边界情况测试 › 应该处理空请求体
🧹 Starting E2E test global teardown...
✅ E2E seed data cleaned up
✅ Test state file removed
✅ E2E test global teardown completed
[1A[2K  3 failed
    [chromium] › src\__tests__\e2e\auth.spec.ts:413:7 › 密码找回与重置 › 应该发送密码重置验证码 ──────────────────────
    [chromium] › src\__tests__\e2e\auth.spec.ts:612:7 › 律师资格验证流程 › 管理员应该能够审核资格申请 ───────────────────
    [chromium] › src\__tests__\e2e\auth.spec.ts:807:7 › 第三方认证流程 › OAuth回调应该验证必要参数 ──────────────────
  35 passed (35.7s)
npm notice
npm notice New minor version of npm available! 11.6.2 -> 11.11.1
npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.11.1
npm notice To update run: npm install -g npm@11.11.1
npm notice
